--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
     <title>Website</title>
   </head>
   <body>
+    <header>
+      <div class="logo">DD</div>
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="nav-bar">
+        <ul>
+          <button class="mode">Light Mode</button>
+          <li><a href="">About</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Why Coding</a></li>
+        </ul>
+      </div>
+    </header>
     <section>
       <div class="hero">
-        <p class="first_name">Deepashri</p>
-        <p class="last_name">Dali</p>
+        <p class="first_name">Hi! I'm Deepashri</p>
+        <p class="last_name">Dali.</p>
         <p class="title">
           Thanks for visiting<br />
           my web page.
