make nav-bar responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans|Work+Sans:300"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Website</title>
   </head>
@@ -17,20 +21,21 @@
       </div>
       <div class="nav-bar">
         <ul>
-          <button class="mode">Light Mode</button>
           <li><a href="">About</a></li>
           <li><a href="">Projects</a></li>
           <li><a href="">Why Coding</a></li>
+          <button class="mode">Light Mode</button>
         </ul>
       </div>
     </header>
     <section>
       <div class="hero">
-        <p class="first_name">Hi! I'm Deepashri</p>
-        <p class="last_name">Dali.</p>
-        <p class="title">
+        <p class="first_name">I'm Deepashri</p>
+        <p class="last_name">Dali</p>
+        <p class="message" id="pop-1">Hi FAC</p>
+        <p class="message" id="pop-2">
           Thanks for visiting<br />
-          my web page.
+          my website.
         </p>
       </div>
     </section>
