add media queries

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <p class="first_name">I'm Deepashri</p>
         <p class="last_name">Dali</p>
         <p class="message" id="pop-1">Hi FAC</p>
-        <p class="message" id="pop-2">
-          Thanks for visiting<br />
-          my website.
-        </p>
+        <p class="message" id="pop-2">Thanks for visiting my website.</p>
       </div>
     </section>
     <script src="./script.js"></script>
