add dark and light mode function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section>
       <div class="hero">
-        <p class="first_name">I'm Deepashri</p>
+        <p class="first_name">Deepashri</p>
         <p class="last_name">Dali</p>
         <p class="message" id="pop-1">Hi FAC</p>
         <p class="message" id="pop-2">Thanks for visiting my website.</p>
