add images for carousel

--- a/index.html
+++ b/index.html
@@ -28,12 +28,43 @@
         </ul>
       </div>
     </header>
-    <section>
+    <section class="container">
       <div class="hero">
-        <p class="first_name">Deepashri</p>
+        <p class="first_name">I'm Deepashri</p>
         <p class="last_name">Dali</p>
         <p class="message" id="pop-1">Hi FAC</p>
         <p class="message" id="pop-2">Thanks for visiting my website.</p>
+      </div>
+    </section>
+    <section class="container">
+      <div id="carousel">
+        <h2>James Webb Telescope images</h2>
+        <div class="slides">
+          <div class="slide">
+            <img
+              class="jw_image"
+              src="./Images/main_image_deep_field_smacs0723-5mb.jpg"
+            />
+          </div>
+          <div class="slide">
+            <img
+              class="jw_image"
+              src="./Images/main_image_star-forming_region_carina_nircam_final-1280.jpg"
+            />
+          </div>
+          <div class="slide">
+            <img
+              class="jw_image"
+              src="./Images/southern-ring-nebula-2-_custom-60c7d16d9c36f085646be2dad4585892c783952d-s1100-c50.jpg"
+            />
+          </div>
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+        </div>
       </div>
     </section>
     <script src="./script.js"></script>
