add function to display dots on slider

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="slide">
             <img
-              class="jw_image"
+              class="jw_image jw_image--selected"
               src="./Images/main_image_star-forming_region_carina_nircam_final-1280.jpg"
             />
           </div>
@@ -58,11 +58,11 @@
               src="./Images/southern-ring-nebula-2-_custom-60c7d16d9c36f085646be2dad4585892c783952d-s1100-c50.jpg"
             />
           </div>
+
           <div class="dots">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
+            <!-- <span class="dot"></span>
+            <span class="dot dot--selected"></span>
+            <span class="dot"></span> -->
           </div>
         </div>
       </div>
