add function to show each slide on selecting dots

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="slide">
             <img
-              class="jw_image jw_image--selected"
+              class="jw_image"
               src="./Images/main_image_star-forming_region_carina_nircam_final-1280.jpg"
             />
           </div>
@@ -59,11 +59,7 @@
             />
           </div>
 
-          <div class="dots">
-            <!-- <span class="dot"></span>
-            <span class="dot dot--selected"></span>
-            <span class="dot"></span> -->
-          </div>
+          <div class="dots"></div>
         </div>
       </div>
     </section>
