refactor show slides function  and add previous and next buttons

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       <div id="carousel">
         <h2>James Webb Telescope images</h2>
         <div class="slides">
+          <a class="prev">❮</a>
+          <a class="next">❯</a>
           <div class="slide">
             <img
               class="jw_image"
@@ -61,6 +63,9 @@
 
           <div class="dots"></div>
         </div>
+        <button id="upload_img" class="mode">
+          Upload your favourite James Webb image
+        </button>
       </div>
     </section>
     <script src="./script.js"></script>
