add play and pause buttons

--- a/index.html
+++ b/index.html
@@ -63,9 +63,23 @@
 
           <div class="dots"></div>
         </div>
-        <button id="upload_img" class="mode">
-          Upload your favourite James Webb image
-        </button>
+        <div class="play-pause">
+          <button id="play" class="circle">
+            <img
+              class="btn_play_pause"
+              src="./Images/kisspng-video-sound-play-button-transparent-background-5a78ae77b41627.3186179915178584237376.png"
+              alt="Play button"
+            />
+          </button>
+          <button id="pause" class="circle">
+            <img
+              class="btn_play_pause"
+              src="./Images/kisspng-registered-trademark-symbol-service-mark-logo-pause-button-5ac474af7b7745.0834657315228243675057.png"
+              alt="Play button"
+            />
+          </button>
+        </div>
+        <button id="upload_img" class="mode">Upload image</button>
       </div>
     </section>
     <script src="./script.js"></script>
