Add about me section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Website</title>
+    <title>Deepashri Dali</title>
   </head>
   <body>
     <header id="header">
       <div>
-        <a href="#hero_section" class="logo">DD</a>
+        <a href="#hero-div" class="logo">DD</a>
       </div>
       <div class="hamburger">
         <div class="line"></div>
@@ -31,13 +31,57 @@
       </div>
     </header>
     <section id="hero_section" class="container">
-      <div class="hero">
+      <div id="hero-div" class="hero">
         <p class="first_name">I'm Deepashri</p>
         <p class="last_name">Dali</p>
         <p class="message" id="pop-1">Hi FAC</p>
         <p class="message" id="pop-2">Thanks for visiting my website.</p>
       </div>
     </section>
+    <section id="me_section" class="container">
+      <div class="about">
+        <h1>About me</h1>
+        <ul class="about-me_btns">
+          <li class="about-me_btn about-me_btn-active">ABOUT</li>
+          <li class="about-me_btn">WORK</li>
+          <li class="about-me_btn">CODING</li>
+        </ul>
+
+        <div class="about-me">
+          <div class="me me-active">
+            <h2>My background</h2>
+            <p class="text-me">
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo autem magnam iusto voluptatibus error quas, vero esse, beatae perspiciatis eveniet nam. Tenetur saepe impedit facilis quae odit voluptas necessitatibus!
+             Soluta vel quia atque. Fuga magni neque quia, sit illo ut laudantium rem earum itaque incidunt beatae quam ipsa officiis est! Mollitia maxime, corporis quae maiores vitae voluptatem praesentium voluptatum.
+             Architecto consequuntur, dolorum praesentium nemo ipsam vero explicabo dolorem iure animi. Debitis vitae enim, dolores impedit ex earum, voluptatum, dicta dolor fugiat id maxime nam recusandae temporibus blanditiis tempora voluptatem.
+             Cumque tempora id ab aspernatur, ipsa nesciunt libero ipsam, reprehenderit soluta quas deleniti? Illum placeat velit ratione, pariatur culpa, id beatae enim nam, debitis modi nemo quod veniam odio voluptate.
+             Animi et, voluptates doloribus, culpa fuga laudantium possimus quibusdam blanditiis corporis eveniet ad illum earum necessitatibus cupiditate. Tenetur deserunt ea provident consequuntur autem? Beatae ut ducimus modi natus eum quia?
+            </p>
+          </div>
+          <div class="me">
+            <h2>My Career</h2>
+            <p class="text-me">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo autem magnam iusto voluptatibus error quas, vero esse, beatae perspiciatis eveniet nam. Tenetur saepe impedit facilis quae odit voluptas necessitatibus!
+              Soluta vel quia atque. Fuga magni neque quia, sit illo ut laudantium rem earum itaque incidunt beatae quam ipsa officiis est! Mollitia maxime, corporis quae maiores vitae voluptatem praesentium voluptatum.
+              Architecto consequuntur, dolorum praesentium nemo ipsam vero explicabo dolorem iure animi. Debitis vitae enim, dolores impedit ex earum, voluptatum, dicta dolor fugiat id maxime nam recusandae temporibus blanditiis tempora voluptatem.
+              Cumque tempora id ab aspernatur, ipsa nesciunt libero ipsam, reprehenderit soluta quas deleniti? Illum placeat velit ratione, pariatur culpa, id beatae enim nam, debitis modi nemo quod veniam odio voluptate.
+              Animi et, voluptates doloribus, culpa fuga laudantium possimus quibusdam blanditiis corporis eveniet ad illum earum necessitatibus cupiditate. Tenetur deserunt ea provident consequuntur autem? Beatae ut ducimus modi natus eum quia?
+            </p>
+          </div>
+          <div class="me">
+            <h2>My coding journey</h2>
+            <p class="text-me">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo autem magnam iusto voluptatibus error quas, vero esse, beatae perspiciatis eveniet nam. Tenetur saepe impedit facilis quae odit voluptas necessitatibus!
+              Soluta vel quia atque. Fuga magni neque quia, sit illo ut laudantium rem earum itaque incidunt beatae quam ipsa officiis est! Mollitia maxime, corporis quae maiores vitae voluptatem praesentium voluptatum.
+              Architecto consequuntur, dolorum praesentium nemo ipsam vero explicabo dolorem iure animi. Debitis vitae enim, dolores impedit ex earum, voluptatum, dicta dolor fugiat id maxime nam recusandae temporibus blanditiis tempora voluptatem.
+              Cumque tempora id ab aspernatur, ipsa nesciunt libero ipsam, reprehenderit soluta quas deleniti? Illum placeat velit ratione, pariatur culpa, id beatae enim nam, debitis modi nemo quod veniam odio voluptate.
+              Animi et, voluptates doloribus, culpa fuga laudantium possimus quibusdam blanditiis corporis eveniet ad illum earum necessitatibus cupiditate. Tenetur deserunt ea provident consequuntur autem? Beatae ut ducimus modi natus eum quia?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="container">
       <div id="carousel">
         <h2>James Webb Telescope images</h2>
@@ -74,7 +118,7 @@
           />
         </button>
 
-        <p><img id="output" width="200" /></p>
+        <!-- <p><img id="output" width="200" /></p> -->
       </div>
     </section>
     <script src="./script.js"></script>
