Add function to display tabs for about me section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div class="about">
         <h1>About me</h1>
         <ul class="about-me_btns">
-          <li class="about-me_btn about-me_btn-active">ABOUT</li>
-          <li class="about-me_btn">WORK</li>
+          <li class="about-me_btn ">ABOUT</li>
+          <li class="about-me_btn about-me_btn-active">WORK</li>
           <li class="about-me_btn">CODING</li>
         </ul>
 
