Add greeting function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header id="header">
       <div>
-        <a href="#hero-div" class="logo">DD</a>
+        <a href="#hero_section" class="logo">DD</a>
       </div>
       <div class="hamburger">
         <div class="line"></div>
@@ -32,10 +32,14 @@
     </header>
     <section id="hero_section" class="container">
       <div id="hero-div" class="hero">
-        <p class="first_name">I'm Deepashri</p>
+        <p class="good">Good</p>
+        <p class="greeting"></p>
+        <p class="fac">FAC !</p>
+        <p class="pre">I'm</p>
+        <p class="first_name">Deepashri</p>
         <p class="last_name">Dali</p>
-        <p class="message" id="pop-1">Hi FAC</p>
-        <p class="message" id="pop-2">Thanks for visiting my website.</p>
+        <p class="message">Thank you for visiting my website.</p>
+     
       </div>
     </section>
     <section id="me_section" class="container">
@@ -84,7 +88,7 @@
 
     <section class="container">
       <div id="carousel">
-        <h2>James Webb Telescope images</h2>
+        <h2>Images</h2>
         <div class="slides">
           <a class="prev">❮</a>
           <a class="next">❯</a>
