--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     </header>
     <section id="hero_section" class="container">
       <div id="hero-div" class="hero">
-        <p class="good">Good</p>
-        <p class="greeting"></p>
-        <p class="fac">FAC !</p>
+        <p class="greeting">Good<br><span class="time-period"></span><br>FAC !</p>
         <p class="pre">I'm</p>
         <p class="first_name">Deepashri</p>
         <p class="last_name">Dali</p>
