--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="nav-bar">
         <ul>
           <li><a href="">About</a></li>
+          <li><a href="">Interests</a></li>
           <li><a href="">Projects</a></li>
-          <li><a href="">Why Coding</a></li>
           <button class="mode">Light Mode</button>
         </ul>
       </div>
@@ -85,6 +85,7 @@
     </section>
 
     <section class="container">
+      <div class="text-me"></div>
       <div id="carousel">
         <h2>Images</h2>
         <div class="slides">
@@ -119,8 +120,19 @@
             style="display: none"
           />
         </button>
-
-        <!-- <p><img id="output" width="200" /></p> -->
+      </div>
+    </section>
+    <section class="container">
+      <div class="london-images">
+        <p class="text-me" id="description"> My most favourite images though are of earth itself taken from the International Space Station. Move the sider to see London captured from ISS during day and at night.</p>
+        <img src="./Images/london-day.JPG" alt="London as seen from ISS in the daytime" class="img1" >
+        <img src="./Images/london-night.JPG" alt="London as seen from ISS at night" class="img2" >
+        <div class="slider-div">  
+          <label id="slider-label" for="slider">          
+          </label>
+          <input type="range" min="0" max="100" value="0" class="slider" id="myRange"
+          />
+        </div>
       </div>
     </section>
     <script src="./script.js"></script>
