Add london images slider function

--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
       </div>
     </section>
     <section class="container">
+   
       <div class="london-images">
+       
         <p class="text-me" id="description"> My most favourite images though are of earth itself taken from the International Space Station. Move the sider to see London captured from ISS during day and at night.</p>
-        <img src="./Images/london-day.JPG" alt="London as seen from ISS in the daytime" class="img1" >
-        <img src="./Images/london-night.JPG" alt="London as seen from ISS at night" class="img2" >
+        <img src="./Images/london-day.JPG" alt="London as seen from ISS in the daytime" class="img" id="img1" >
+        <img src="./Images/london-night.JPG" alt="London as seen from ISS at night" class="img" id="img2" >
         <div class="slider-div">  
           <label id="slider-label" for="slider">          
           </label>
