Add css for my projects section

--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
       </div>
     </section>
     <section class="container">
-   
-      <div class="london-images">
-       
-        <p class="text-me" id="description"> My most favourite images though are of earth itself taken from the International Space Station. Move the sider to see London captured from ISS during day and at night.</p>
+      <div class="london-images">  
+      <div id="description">
+          <h2>London from space</h2>
+        <p class="text-me" > My most favourite images though are of earth itself taken from the International Space Station. Move the sider to see London captured from ISS during day and at night.</p>
+      </div>
         <img src="./Images/london-day.JPG" alt="London as seen from ISS in the daytime" class="img" id="img1" >
         <img src="./Images/london-night.JPG" alt="London as seen from ISS at night" class="img" id="img2" >
         <div class="slider-div">  
@@ -136,6 +137,30 @@
           />
         </div>
       </div>
+    </section>
+    <section class="container">
+      <div class="projects-div">
+        <h2>Hover to see inks to my projects</h2>
+      <div class="myProjects">
+        <div class="item">
+          <img src="./Images/Earthrise.JPG" />
+          <span class="caption">Visit Hobby page</span>
+        </div>
+        <div class="item">
+          <img src="./Images/Earthrise.JPG" />
+          <!-- <span class="caption">Visit Project gallery </span> -->
+          <a class="caption" href="https://deepsdali.github.io/Project-Gallery/" target="_blank">Visit Project gallery</a>
+        </div>
+        <div class="item">
+         <img src="./Images/Earthrise.JPG" />
+         <span class="caption">Visit Movie data</span>
+        </div>
+        <div class="item">
+          <img src="./Images/Earthrise.JPG" />
+          <span class="caption">Visit game page</span>
+        </div>
+      </div>
+    </div>
     </section>
     <script src="./script.js"></script>
   </body>
