--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="shortcut icon"
+      href="./images/Picture1.ico"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Open+Sans|Work+Sans:300"
       rel="stylesheet"
     />
@@ -140,24 +145,23 @@
     </section>
     <section class="container">
       <div class="projects-div">
-        <h2>Hover to see inks to my projects</h2>
+        <h2>Hover to see links to my project repositories</h2>
       <div class="myProjects">
         <div class="item">
-          <img src="./Images/Earthrise.JPG" />
-          <span class="caption">Visit Hobby page</span>
+          <img src="./Images/hobby.JPG" />
+          <a class="caption" href="https://github.com/DeepsDali/My-Hobby-Page" target="_blank">Visit Hobby page</a>
         </div>
         <div class="item">
-          <img src="./Images/Earthrise.JPG" />
-          <!-- <span class="caption">Visit Project gallery </span> -->
-          <a class="caption" href="https://deepsdali.github.io/Project-Gallery/" target="_blank">Visit Project gallery</a>
+          <img src="./Images/site-pic.JPG" />
+          <a class="caption" href="https://github.com/DeepsDali/Project-Gallery" target="_blank">Visit Project gallery</a>
         </div>
         <div class="item">
-         <img src="./Images/Earthrise.JPG" />
-         <span class="caption">Visit Movie data</span>
+         <img src="./Images/movie.JPG" />
+         <a class="caption" href="https://github.com/DeepsDali/Movies" target="_blank">Visit Movie data</a>
         </div>
         <div class="item">
-          <img src="./Images/Earthrise.JPG" />
-          <span class="caption">Visit game page</span>
+          <img src="./Images/game.JPG" />
+          <a class="caption" href="https://github.com/DeepsDali/Game" target="_blank">Visit game page</a>
         </div>
       </div>
     </div>
