--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
       <div class="nav-bar">
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Interests</a></li>
-          <li><a href="">Projects</a></li>
+          <li><a href="#me_section">About</a></li>
+          <li><a href="#projects_section">Projects</a></li>
+          <li><a href="#interests_section">Interests</a></li>
           <button class="mode">Light Mode</button>
         </ul>
       </div>
@@ -77,22 +77,43 @@
           </div>
           <div class="me">
             <h2>My coding journey</h2>
-            <p class="text-me">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo autem magnam iusto voluptatibus error quas, vero esse, beatae perspiciatis eveniet nam. Tenetur saepe impedit facilis quae odit voluptas necessitatibus!
-              Soluta vel quia atque. Fuga magni neque quia, sit illo ut laudantium rem earum itaque incidunt beatae quam ipsa officiis est! Mollitia maxime, corporis quae maiores vitae voluptatem praesentium voluptatum.
-              Architecto consequuntur, dolorum praesentium nemo ipsam vero explicabo dolorem iure animi. Debitis vitae enim, dolores impedit ex earum, voluptatum, dicta dolor fugiat id maxime nam recusandae temporibus blanditiis tempora voluptatem.
-              Cumque tempora id ab aspernatur, ipsa nesciunt libero ipsam, reprehenderit soluta quas deleniti? Illum placeat velit ratione, pariatur culpa, id beatae enim nam, debitis modi nemo quod veniam odio voluptate.
-              Animi et, voluptates doloribus, culpa fuga laudantium possimus quibusdam blanditiis corporis eveniet ad illum earum necessitatibus cupiditate. Tenetur deserunt ea provident consequuntur autem? Beatae ut ducimus modi natus eum quia?
-            </p>
+          
           </div>
         </div>
       </div>
     </section>
-
-    <section class="container">
-      <div class="text-me"></div>
+    <section id="projects_section"class="container">
+      <div class="projects-div">
+        <h2>Hover to see links to my project repositories</h2>
+      <div class="myProjects">
+        <div class="item">
+          <img src="./Images/hobby.JPG" />
+          <a class="caption" href="https://github.com/DeepsDali/My-Hobby-Page" target="_blank">Visit Hobby page</a>
+        </div>
+        <div class="item">
+          <img src="./Images/site-pic.JPG" />
+          <a class="caption" href="https://github.com/DeepsDali/Project-Gallery" target="_blank">Visit Project gallery</a>
+        </div>
+        <div class="item">
+         <img src="./Images/movie.JPG" />
+         <a class="caption" href="https://github.com/DeepsDali/Movies" target="_blank">Visit Movie data</a>
+        </div>
+        <div class="item">
+          <img src="./Images/game.JPG" />
+          <a class="caption" href="https://github.com/DeepsDali/Game" target="_blank">Visit game page</a>
+        </div>
+      </div>
+    </div>
+    </section>
+    <section id="interests_section" class="container">   
       <div id="carousel">
-        <h2>Images</h2>
+        
+        <div class="int-info">  
+          <h2>My Interests</h2>
+        <p >As an astronomy enthusiast, I was excited with the much awaited launch of the James Webb Telescope. Why is it so special? The telescope uses infra red light to “see” all the way back to the first generation of stars created 13.5 billion years ago, just 300 million years after the Big Bang.
+          </p><br><p> Check out my slider below to see some of my favourite images taken by the telescope this year. You can play and pause the slider or use the left and right arrows to browse at your pace. You can even try uploading any of your favourite images to my collection using the upload button.</p>
+        </div>
+        <h2>My favourite James Webb space images</h2>
         <div class="slides">
           <a class="prev">❮</a>
           <a class="next">❯</a>
@@ -125,13 +146,12 @@
             style="display: none"
           />
         </button>
-      </div>
-    </section>
-    <section class="container">
+      <!-- </div> -->
+
       <div class="london-images">  
       <div id="description">
           <h2>London from space</h2>
-        <p class="text-me" > My most favourite images though are of earth itself taken from the International Space Station. Move the sider to see London captured from ISS during day and at night.</p>
+        <p class="text-me" > My most favourite space images though are of earth itself taken from the International Space Station. For example, see the beauty of London captured from ISS during day and at night by moving the slider.</p>
       </div>
         <img src="./Images/london-day.JPG" alt="London as seen from ISS in the daytime" class="img" id="img1" >
         <img src="./Images/london-night.JPG" alt="London as seen from ISS at night" class="img" id="img2" >
@@ -142,30 +162,10 @@
           />
         </div>
       </div>
-    </section>
-    <section class="container">
-      <div class="projects-div">
-        <h2>Hover to see links to my project repositories</h2>
-      <div class="myProjects">
-        <div class="item">
-          <img src="./Images/hobby.JPG" />
-          <a class="caption" href="https://github.com/DeepsDali/My-Hobby-Page" target="_blank">Visit Hobby page</a>
-        </div>
-        <div class="item">
-          <img src="./Images/site-pic.JPG" />
-          <a class="caption" href="https://github.com/DeepsDali/Project-Gallery" target="_blank">Visit Project gallery</a>
-        </div>
-        <div class="item">
-         <img src="./Images/movie.JPG" />
-         <a class="caption" href="https://github.com/DeepsDali/Movies" target="_blank">Visit Movie data</a>
-        </div>
-        <div class="item">
-          <img src="./Images/game.JPG" />
-          <a class="caption" href="https://github.com/DeepsDali/Game" target="_blank">Visit game page</a>
-        </div>
       </div>
-    </div>
+      <h2>&#169; Deepashri Dali 2023</h2>
     </section>
+ 
     <script src="./script.js"></script>
   </body>
 </html>
