Edit about section content

--- a/index.html
+++ b/index.html
@@ -49,35 +49,38 @@
       <div class="about">
         <h1>About me</h1>
         <ul class="about-me_btns">
-          <li class="about-me_btn ">ABOUT</li>
-          <li class="about-me_btn about-me_btn-active">WORK</li>
-          <li class="about-me_btn">CODING</li>
+          <li class="about-me_btn about-me_btn-active">Background</li>
+          <li class="about-me_btn">Career </li>
+          <li class="about-me_btn">Coding</li>
         </ul>
 
         <div class="about-me">
           <div class="me me-active">
-            <h2>My background</h2>
+            <h2>Background</h2>
             <p class="text-me">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo autem magnam iusto voluptatibus error quas, vero esse, beatae perspiciatis eveniet nam. Tenetur saepe impedit facilis quae odit voluptas necessitatibus!
-             Soluta vel quia atque. Fuga magni neque quia, sit illo ut laudantium rem earum itaque incidunt beatae quam ipsa officiis est! Mollitia maxime, corporis quae maiores vitae voluptatem praesentium voluptatum.
-             Architecto consequuntur, dolorum praesentium nemo ipsam vero explicabo dolorem iure animi. Debitis vitae enim, dolores impedit ex earum, voluptatum, dicta dolor fugiat id maxime nam recusandae temporibus blanditiis tempora voluptatem.
-             Cumque tempora id ab aspernatur, ipsa nesciunt libero ipsam, reprehenderit soluta quas deleniti? Illum placeat velit ratione, pariatur culpa, id beatae enim nam, debitis modi nemo quod veniam odio voluptate.
-             Animi et, voluptates doloribus, culpa fuga laudantium possimus quibusdam blanditiis corporis eveniet ad illum earum necessitatibus cupiditate. Tenetur deserunt ea provident consequuntur autem? Beatae ut ducimus modi natus eum quia?
+              Hello! Thanks for visiting my website. I'm Deepa, originally from the bustling city of Mumbai, India.
+
+              My passions are cooking Indian and Chinese dishes, baking, devouring books and watching shows on astronomy and recently coding.  I have had a long career mainly in marketing. 
+
+              I have over 10 years of diverse work experience in brand management, digital marketing and retail environments in Mumbai and London.	After a career break to focus on my family am currently self-learning to code aiming to restart on a new career path of a web developer
+
             </p>
           </div>
           <div class="me">
-            <h2>My Career</h2>
+            <h2>Career</h2>
             <p class="text-me">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo autem magnam iusto voluptatibus error quas, vero esse, beatae perspiciatis eveniet nam. Tenetur saepe impedit facilis quae odit voluptas necessitatibus!
-              Soluta vel quia atque. Fuga magni neque quia, sit illo ut laudantium rem earum itaque incidunt beatae quam ipsa officiis est! Mollitia maxime, corporis quae maiores vitae voluptatem praesentium voluptatum.
-              Architecto consequuntur, dolorum praesentium nemo ipsam vero explicabo dolorem iure animi. Debitis vitae enim, dolores impedit ex earum, voluptatum, dicta dolor fugiat id maxime nam recusandae temporibus blanditiis tempora voluptatem.
-              Cumque tempora id ab aspernatur, ipsa nesciunt libero ipsam, reprehenderit soluta quas deleniti? Illum placeat velit ratione, pariatur culpa, id beatae enim nam, debitis modi nemo quod veniam odio voluptate.
-              Animi et, voluptates doloribus, culpa fuga laudantium possimus quibusdam blanditiis corporis eveniet ad illum earum necessitatibus cupiditate. Tenetur deserunt ea provident consequuntur autem? Beatae ut ducimus modi natus eum quia?
+              I have a masters degree in Business Administration and BSc in Physics from Mumbai University. I started my career in brand management in managerial positions at multinational companies in Mumbai, India. After moving to the UK, I worked in the local council's education department and many other private companies. In my last role, I worked as a freelance Digital Marketing Consultant for a Consultant Surgeon's private practice. I helped design, manage and promote the practice websites. I got an opportunity to work with web developers which ignited my interest in software development.
+           <br>  <br>
+              I am inspired by the prospect of creative problem-solving and building tools to improve processess. I am a teamplayer and love to work in a collaborative environment. I am keen to secure
+              an opportunity to further my coding skills and tackle development challenges which enhance user
+              experience
             </p>
           </div>
           <div class="me">
             <h2>My coding journey</h2>
-          
+            <p class="text-me">
+            I started my coding journey with the responsive web design course on Freecodecamp. I enjoyed making a survey form, landing and tribute pages with HTML and CSS on Codepen. I am also learning through various resources like Udemy tutorials, Coursera and Codecademy. A few months back I came across Founders and Coders and so far have immensely benefitted from attending the workshops and meetups. I believe strongly in their ethos to create a positive social impact with collaborative learning. I would love the opportunity to be a part of the cohort to further my learning with the help of supportive mentors and motivated co-learners and also to pay forward and make a difference by sharing my learning with others.
+            </p>
           </div>
         </div>
       </div>
@@ -110,7 +113,7 @@
         
         <div class="int-info">  
           <h2>My Interests</h2>
-        <p >As an astronomy enthusiast, I was excited with the much awaited launch of the James Webb Telescope. Why is it so special? The telescope uses infra red light to “see” all the way back to the first generation of stars created 13.5 billion years ago, just 300 million years after the Big Bang.
+        <p >As an astronomy enthusiast, I was excited when the James Webb Telescope was finally launched on Christmas day 2021. Why is it so special? The telescope uses infra red light to “see” all the way back to the first generation of stars created 13.5 billion years ago, just 300 million years after the Big Bang.
           </p><br><p> Check out my slider below to see some of my favourite images taken by the telescope this year. You can play and pause the slider or use the left and right arrows to browse at your pace. You can even try uploading any of your favourite images to my collection using the upload button.</p>
         </div>
         <h2>My favourite James Webb space images</h2>
